Refactor subagent
